fix notes alignment on schedule show, order cohort's schedules by week on cohort show

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -30,6 +30,7 @@
 
 .schedule-info {
   padding-left: 4%;
+  width: 80%;
   /*width: 714px;
   padding-left: 10px;*/
 }
